[project]
name = "promptimize"
version = "0.1.0"
description = "Promptimize help you to get best prompt for GenAI model execution"
authors = [
    {name = "Praveen Govindaraj",email = "38414524+Praveengovianalytics@users.noreply.github.com"}
]
license = {text = "Apache Licence 2"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dspy (>=2.6.27,<3.0.0)",
    "gradio (>=5.33.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
