[project]
name = "prompt-imize"
version = "0.1.0"
description = "Promptimize help you to get best prompt for GenAI model execution"
authors = [
    {name = "Praveen Govindaraj",email = "Praveengovi@gmail.com"}
]
license = {text = "Apache Licence 2"}
readme = "README.md"
packages = [{ include = "prompt-imize" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "dspy (>=2.6.27,<3.0.0)",
    "gradio (>=5.33.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
